<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.bdrc</groupId>
  <artifactId>lds-pdi</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>lds-pdi Maven Webapp</name>
  <url>http://maven.apache.org</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jersey.version>2.26</jersey.version>        
  </properties>
  <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
  </dependencyManagement>
  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-server -->
	<dependency>
	    <groupId>org.glassfish.jersey.core</groupId>
	    <artifactId>jersey-server</artifactId>	    	    
	</dependency>
	
    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.ext/jersey-mvc -->
	<dependency>
	    <groupId>org.glassfish.jersey.ext</groupId>
	    <artifactId>jersey-mvc</artifactId>	    
	    <exclusions>
        <exclusion>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
        </exclusion>
    	</exclusions> 	    
	</dependency>	
	<dependency>
	    <groupId>javax.servlet</groupId>
	    <artifactId>javax.servlet-api</artifactId>
	    <version>4.0.0</version>
	    <!-- scope>provided</scope-->
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
	<dependency>
	    <groupId>org.apache.jena</groupId>
	    <artifactId>jena-arq</artifactId>
	    <version>3.6.0</version>
	    <exclusions>
        <exclusion>
          <artifactId>jsonld-java</artifactId>
          <groupId>com.github.jsonld-java</groupId>
        </exclusion>
      	</exclusions>
	</dependency>
	<dependency>
      <groupId>com.github.jsonld-java</groupId>
      <artifactId>jsonld-java</artifactId>
      <version>0.11.1</version>      
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>2.9.0</version>
    </dependency>
    
	<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-rdfconnection -->
	<dependency>
	    <groupId>org.apache.jena</groupId>
	    <artifactId>jena-rdfconnection</artifactId>
	    <version>3.6.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-fuseki-embedded -->
    <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-fuseki-embedded</artifactId>
        <version>3.6.0</version>
        <scope>test</scope>
    </dependency>	
    <!-- https://mvnrepository.com/artifact/io.bdrc/jena-stable-turtle -->
    <dependency>
        <groupId>io.bdrc</groupId>
        <artifactId>jena-stable-turtle</artifactId>
        <version>0.5.0</version>
    </dependency>

    
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>    

    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.ext/jersey-mvc-jsp -->
    <dependency>
        <groupId>org.glassfish.jersey.ext</groupId>
        <artifactId>jersey-mvc-jsp</artifactId>        
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.test-framework/jersey-test-framework-core -->
    <dependency>
        <groupId>org.glassfish.jersey.test-framework</groupId>
        <artifactId>jersey-test-framework-core</artifactId>    
    </dependency>
	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.test-framework.providers/jersey-test-framework-provider-jetty -->
	<dependency>
	    <groupId>org.glassfish.jersey.test-framework.providers</groupId>
	    <artifactId>jersey-test-framework-provider-jetty</artifactId>	    	    
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.inject/jersey-hk2 -->
	<dependency>
	    <groupId>org.glassfish.jersey.inject</groupId>
	    <artifactId>jersey-hk2</artifactId>	       
	</dependency>	
	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-jetty-servlet -->
	<dependency>
	    <groupId>org.glassfish.jersey.containers</groupId>
	    <artifactId>jersey-container-jetty-servlet</artifactId>	        
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson -->
	<dependency>
	    <groupId>org.glassfish.jersey.media</groupId>
	    <artifactId>jersey-media-json-jackson</artifactId>	        
	</dependency>
    
	<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-util -->
	<dependency>
	    <groupId>org.eclipse.jetty</groupId>
	    <artifactId>jetty-util</artifactId>
	    <version>9.4.8.v20171121</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-http -->
	<dependency>
	    <groupId>org.eclipse.jetty</groupId>
	    <artifactId>jetty-http</artifactId>
	    <version>9.4.8.v20171121</version>
	</dependency>
    	
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-text</artifactId>
	    <version>1.2</version>
	</dependency>
    <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
    <dependency>
        <groupId>commons-validator</groupId>
        <artifactId>commons-validator</artifactId>
        <version>1.6</version>
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
    <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.6</version>
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
    <dependency>
        <groupId>org.eclipse.jgit</groupId>
        <artifactId>org.eclipse.jgit</artifactId>
        <version>4.10.0.201712302008-r</version>
    </dependency> 
    
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-jcs-core -->
    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-jcs-core</artifactId>
        <version>2.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-jcs-jcache -->
    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-jcs-jcache</artifactId>
        <version>2.2</version>
        <scope>test</scope>
    </dependency> 
          
    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
    <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>1.7.25</version>
        <!-- scope>test</scope-->
    </dependency> 
    
    <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl-api -->   
    <dependency>
        <groupId>jstl</groupId>
        <artifactId>jstl</artifactId>
    <version>1.2</version>
    </dependency>    
 </dependencies>
  <build>
    <finalName>lds-pdi</finalName>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.5.1</version>
            <inherited>true</inherited>
            <configuration>
                <source>1.8</source>
                <target>1.8</target>
            </configuration>
        </plugin>
    	<plugin>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-maven-plugin</artifactId>
            <version>9.4.7.RC0</version>
            <configuration>
	            <webApp>
                    <context-path>/</context-path>	            	                
		            <webInfIncludeJarPattern>^$</webInfIncludeJarPattern>
		            <containerIncludeJarPattern>^$</containerIncludeJarPattern> 
                    <defaultsDescriptor>src/main/webapp/WEB-INF/webdefault.xml</defaultsDescriptor>
	            </webApp>
                </configuration>                
         </plugin>
         <plugin>
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->			
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-war-plugin</artifactId>
			<version>3.2.0</version>
			<configuration>
                <attachClasses>true</attachClasses>
		        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
		        <webResources>
		            <resource>
		                <directory>src/main/webapp</directory>
		                <filtering>true</filtering>
		            </resource>
		            <resource>
		                <directory>src/main/resources</directory>		                		                
		            </resource>                              
		        </webResources>                
		    </configuration>            
         </plugin>
         <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>3.1.1</version>
          <dependencies>
            <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
            <dependency>
              <groupId>com.github.spotbugs</groupId>
              <artifactId>spotbugs</artifactId>
              <version>3.1.1</version>
            </dependency>
          </dependencies>
        </plugin>
     </plugins>
  </build>
</project>